--- a/assets/style.css
+++ b/assets/style.css
@@ -26,7 +26,7 @@ body {
 
 /* Add a color to the active/current link */
 .topnav a.active {
-	background-color: #4caf50;
+	background-color: #ff1717;
 	color: white;
 }
 ul {
